--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,5 +1,66 @@
+*{
+	box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .row{
 	text-align: center;
-	font-family: sans-serif;
 	font-weight: bold;
 }
+
+.p1{
+	background-color: pink;
+    color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: bold;
+    height: 35px;
+    width: 120px;
+    padding: 10px;
+    text-align: center;
+}
+
+.p2{
+	background-color: 0000FF;
+    border: 2px solid black;
+    height: 150px;
+    margin-right: 10px;
+    padding: 40px 10px 5px 10px;
+    overflow: hidden;
+}
+
+.container{
+	position: relative;
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+.col-md-12 {
+    width: 100%;
+    float: left;
+}
+}
+
+@media (min-width: 992px)
+{
+	.col-lg-4 {
+    width: 33.33%;
+    float: left;
+}
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+.col-md-6 {
+    width: 50%;
+    float: left;
+}
+
+@media (max-width: 767px)
+{
+	col-sm-12 {
+    width:100%;
+    float:left;
+}
+}
+
+
