--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -21,14 +21,33 @@
     text-align: center;
 }
 
-.p2{
-	background-color: 0000FF;
-    border: 2px solid black;
-    height: 150px;
-    margin-right: 10px;
-    padding: 40px 10px 5px 10px;
-    overflow: hidden;
+#p2 {
+    background-color: pink;
+    color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: bold;
+    height: 35px;
+    width: 120px;
+    padding: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+#p3 {
+    background-color: pink;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: bold;
+    height: 35px;
+    width: 120px;
+    padding: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .container{
 	position: relative;
