--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -62,7 +62,8 @@ p {
 }
 
 
-@media (min-width: 768px) and (max-width: 991px){
+@media (min-width: 768px) and (max-width: 991px)
+{
 .col-md-12 {
     width: 100%;
     float: left;
@@ -77,10 +78,12 @@ p {
 }
 }
 
-@media (min-width: 768px) and (max-width: 991px){
+@media (min-width: 768px) and (max-width: 991px)
+{
 .col-md-6 {
     width: 50%;
     float: left;
+}
 }
 
 @media (max-width: 767px)
