--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -72,7 +72,7 @@ p {
 
 @media (min-width: 992px)
 {
-	.col-lg-4 {
+.col-lg-4 {
     width: 33.33%;
     float: left;
 }
@@ -88,7 +88,7 @@ p {
 
 @media (max-width: 767px)
 {
-	col-sm-12 {
+.col-sm-12 {
     width:100%;
     float:left;
 }
