--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,7 +1,3 @@
-*{
-	box-sizing: border-box;
-}
-
 .row{
 	text-align: center;
 	font-weight: bold;
@@ -13,7 +9,7 @@
 
 
 p {
-    background-color: FCE2E0;
+    background-color: orange;
     border: 2px solid black;
     height: 150px;
     margin-right: 10px;
@@ -86,10 +82,13 @@ p {
 }
 }
 
-@media (max-width: 767px)
-{
-.col-sm-12 {
+@media (max-width: 767px) {
+	.col-sm-12 {
     width:100%;
     float:left;
 }
+}
+
+* {
+	box-sizing: border-box;
 }
