--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -9,7 +9,7 @@
 
 
 p {
-    background-color: orange;
+    background-color: #A833FF;
     border: 2px solid black;
     height: 150px;
     margin-right: 10px;
@@ -18,7 +18,7 @@ p {
 }
 
 #p1{
-	background-color: pink;
+	background-color: yellow;
     color: black;
     position: absolute;
     top: 0;
@@ -31,7 +31,7 @@ p {
 }
 
 #p2 {
-    background-color: pink;
+    background-color: yellow;
     color: black;
     position: absolute;
     top: 0;
@@ -45,7 +45,7 @@ p {
 }
 
 #p3 {
-    background-color: pink;
+    background-color: yellow;
     position: absolute;
     top: 0;
     right: 0;
